try to create Origin of project
try to create Origin of project

--- a/ElectionMachineJSP/src/main/webapp/index.html
+++ b/ElectionMachineJSP/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link href="../CSS/style.css" rel="stylesheet">
 
 
-    <title>Hello App Engine</title>
+    <title>Election Machine</title>
   </head>
 
   <body>
