--- a/ElectionMachineJSP/src/main/webapp/index.html
+++ b/ElectionMachineJSP/src/main/webapp/index.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <link href="../CSS/style.css" rel="stylesheet">
+    
     <title>Election Machine</title>
   </head>
 
