--- a/ElectionMachineJSP/src/main/webapp/index.html
+++ b/ElectionMachineJSP/src/main/webapp/index.html
@@ -9,6 +9,6 @@
 
   <body>
     <h1>Go To Questions</h1>
-	<a href='/showfish'>See questions</a>
+	<a href='showallquestions'>See questions</a>
   </body>
 </html>
